fixed gap

--- a/styles.css
+++ b/styles.css
@@ -57,15 +57,17 @@ h1 {
 	--items: 10;
 	--width: calc((100% - var(--gap) * var(--items)) / var(--items));
 
+	--margin: calc((var(--width) + var(--gap)) / 2);
+
 	gap: var(--gap);
 }
 
 #keyboard button:nth-child(11) {
-	margin-left: calc(var(--width) / 2);
+	margin-left: var(--margin);
 }
 
 #keyboard button:nth-child(19) {
-	margin-right: calc(var(--width) / 2);
+	margin-right: var(--margin);
 }
 
 #keyboard button {
